--- a/Intel_Optimized_TensorFlow_and_INC_Quantization_Tool_E2E_Sample/alexnet.yaml
+++ b/Intel_Optimized_TensorFlow_and_INC_Quantization_Tool_E2E_Sample/alexnet.yaml
@@ -1,3 +1,5 @@
+version: 1.0
+
 model:
   name: hello_world
   framework: tensorflow                          # possible values are tensorflow, mxnet and pytorch
@@ -13,5 +15,5 @@ tuning:
   accuracy_criterion:
     relative: 0.01                              # the tuning target of accuracy loss percentage: 1%
   exit_policy:
-    timeout: 100                                   # tuning timeout (seconds)
+    timeout: 0                                   # tuning timeout (seconds)
   random_seed: 100                               # random seed
