--- a/intel-extension-for-pytorch/Distributed/Dockerfile
+++ b/intel-extension-for-pytorch/Distributed/Dockerfile
@@ -8,5 +8,5 @@ ENV BASH_ENV="${CPU_ENV}/bin/activate" \
     PROMPT_COMMAND=". ${CPU_ENV}/bin/activate"
 
 #Intall multi-node packages
-RUN python -m pip install ray[data,train,tune,serve] && \
-    python -m pip install --extra-index-url=https://pytorch-extension.intel.com/release-whl/stable/cpu/us/ oneccl_bind_pt==2.1.0
+RUN python -m pip install --no-cache-dir ray[data,train,tune,serve] && \
+    python -m pip install --no-cache-dir --extra-index-url=https://pytorch-extension.intel.com/release-whl/stable/cpu/us/ oneccl_bind_pt==2.1.0
